fixed twitter scrolling on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -541,11 +541,6 @@ footer {
 
 // Page specific: Index
 
-#twitter-div {
-  height: 300px;
-  overflow-y: scroll;
-}
-
 #about-anjan {
   display: flex;
   flex-flow: column;
